; ModuleID = '/home/carl/AnghaBench/git/extr_line-log.c_move_diff_queue.c'
source_filename = "/home/carl/AnghaBench/git/extr_line-log.c_move_diff_queue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.diff_queue_struct = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.diff_queue_struct*, %struct.diff_queue_struct*)* @move_diff_queue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @move_diff_queue(%struct.diff_queue_struct* %0, %struct.diff_queue_struct* %1) #0 {
  %3 = alloca %struct.diff_queue_struct*, align 8
  %4 = alloca %struct.diff_queue_struct*, align 8
  store %struct.diff_queue_struct* %0, %struct.diff_queue_struct** %3, align 8
  store %struct.diff_queue_struct* %1, %struct.diff_queue_struct** %4, align 8
  %5 = load %struct.diff_queue_struct*, %struct.diff_queue_struct** %4, align 8
  %6 = load %struct.diff_queue_struct*, %struct.diff_queue_struct** %3, align 8
  %7 = icmp ne %struct.diff_queue_struct* %5, %6
  %8 = zext i1 %7 to i32
  %9 = call i32 @assert(i32 %8)
  %10 = load %struct.diff_queue_struct*, %struct.diff_queue_struct** %3, align 8
  %11 = load %struct.diff_queue_struct*, %struct.diff_queue_struct** %4, align 8
  %12 = call i32 @memcpy(%struct.diff_queue_struct* %10, %struct.diff_queue_struct* %11, i32 4)
  %13 = load %struct.diff_queue_struct*, %struct.diff_queue_struct** %4, align 8
  %14 = call i32 @DIFF_QUEUE_CLEAR(%struct.diff_queue_struct* %13)
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @memcpy(%struct.diff_queue_struct*, %struct.diff_queue_struct*, i32) #1

declare dso_local i32 @DIFF_QUEUE_CLEAR(%struct.diff_queue_struct*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
